--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="sbadmin.css" />
+    <link
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      rel="stylesheet"
+    />
 
     <title>React App</title>
   </head>
